--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 
 }
 
+
 .navbar-nav .nav-link {
   font-size: 20px;
   color: #023c89;
@@ -80,21 +81,26 @@ select.form-select {
   color: #023c89;
 }
 
-.card {
-  border-radius: 10px;
-  box-shadow: 4px 10px 11px 0px rgba(143, 170, 206, 0.75);
-  background-color: #ffffff;
-  padding: 10px 70px 10px;
-  text-align: center;
-  margin-left: 31%;
-  margin-top: -10%;
-}
+
 
 .card h3 {
   font-size: 22px;
   font-weight: 600;
 
 }
+
+.card {
+  border-radius: 10px;
+  box-shadow: 4px 10px 11px 0px rgba(143, 170, 206, 0.75);
+  background-color: #ffffff;
+  padding: 10px 70px 10px;
+  text-align: center;
+  margin: 0 auto; /* Center the card horizontally */
+  max-width: 90%;
+  height: auto;
+  margin-top: -10%;
+}
+
 
 .drop_box {
   margin: 10px 0;
@@ -105,8 +111,11 @@ select.form-select {
   flex-direction: column;
   border: 3px dotted #a3a3a3;
   border-radius: 5px;
+  width: 80%; /* Adjust the width to fit in small screens */
+  max-width: 400px; /* Limit the maximum width of the box */
+  margin-left: auto;
+  margin-right: auto;
 }
-
 
 
 .box-btn , .copy-button , .start-button {
@@ -138,9 +147,14 @@ select.form-select {
   padding: 12px 20px;
   border-radius: 4px;
 }
-@media (max-width: 1200px) {
+@media (max-width: 700px) {
+
   .card {
-    margin: 0 auto;
+    padding: 10px 10px; /* Adjust the card padding for small screens */
+  }
+
+  .drop_box {
+    padding: 20px; /* Adjust the padding of the drop box for small screens */
   }
 }
 .custom-loader {
@@ -238,11 +252,11 @@ select.form-select {
 }
 
 .feature-left {
-  width: 10%;
   background-color: #dfeaec;
   border-radius: 27px 122px 54px 54px;
   box-shadow: 4px 10px 11px 0px rgba(143, 170, 206, 0.75);
-  padding: 9%;
+  padding: 8%;
+  height: 70vh;
 }
 
 p {
@@ -253,7 +267,7 @@ p {
   margin-left: 50px;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 990px) {
   .feature-footer {
     flex-direction: column;
   }
@@ -365,7 +379,6 @@ p {
   gap: 20px;
   text-align: center;
   border-radius: 19px 19px 84px 85px;
-
 }
 
 .box-1 {
@@ -375,6 +388,7 @@ p {
   padding: 3%;
   box-shadow: 4px 10px 11px 0px rgba(143, 170, 206, 0.75);
   transition: transform 300ms ease-in-out;
+  
 }
 
 
@@ -410,17 +424,45 @@ p {
   background-color: #eef6f7;
   box-shadow: 4px 10px 11px 0px rgba(143, 170, 206, 0.75);
   border-radius: 28px 28px 28px 28px;
+  /* height: 80vh; */
+}
+.content-image1{
+  margin-top: 0%;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 1000px) {
   .boxes {
     flex-direction: column;
+    max-width: 70%;
+   margin-left: 12%;
   }
 
   .content-box {
     flex-direction: column;
+    
   }
+ 
+  .content-image1{
+    text-align: center;
+    margin-left: 15%;
+    width: 70%;
+  }
+
 }
+@media only screen and (max-width: 400px) {
+ 
+  .box-1 , .box-2 , .box-3{
+    margin-right: 0;
+    margin-left: 0;
+    margin-bottom: 20px;
+    padding: 10%;
+    width: auto;
+    border-radius: 0;
+    padding: 10%;
+  }
+
+}
+
 
 /* content-center-image */
 .content-image {
@@ -456,10 +498,9 @@ p {
   box-shadow: 4px 10px 11px 0px rgba(143, 170, 206, 0.75);
   list-style-type: none;
   transition: transform 300ms ease-out;
-
 }
 .content-box-list:hover{
-  transform: translate(12px, 0px) skew(6deg, 0deg);
+  transform: translate(3px, 6px);
   
 }
 .content-para {
@@ -489,18 +530,38 @@ p {
 /* Add more styles for additional colors */
 @media (max-width: 1000px) {
   .content-para {
-    height: 90vh;
+    height: auto;
   }
 }
 
+
+
 /* Responsive Styles */
-@media (max-width: 768px) {
+@media (max-width: 990px) {
   .content-image {
     flex-direction: column;
   }
 
   .content-para {
     margin-top: 25%;
+  }
+  .content-box-list {
+    margin-right: 10%;
+  
+  }
+}
+@media (max-width: 300px) {
+  .content-image {
+    flex-direction: column;
+  }
+
+  .content-para {
+    margin-top: 25%;
+  }
+  .content-box-list {
+   width: 100%;
+   margin-left: -10%;
+  
   }
 }
 
@@ -555,16 +616,14 @@ p {
   padding: 5%;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 990px) {
 
   .footer-row,
   .download {
     flex-direction: column;
   }
 
-  .footer {
-    height: 110vh;
-  }
+  
 }
 
 /* scrollbar */
@@ -662,5 +721,10 @@ p {
 
   .feedback-icon {
     display: block;
+  }
+}
+@media (max-width: 767px) {
+  body {
+    overflow-x: hidden;
   }
 }
